syntax = "proto3";
package cis.types;
option csharp_namespace = "CIS.Infrastructure.gRPC.CisTypes";

message PaginationResponse {
	int32 recordOffset = 1;
	int32 pageSize = 2;
	int32 recordsTotalSize = 3;
}